--- a/src/project.json
+++ b/src/project.json
@@ -18,6 +18,9 @@
     "Microsoft.AspNetCore.Server.Kestrel.Https": "1.0.0-rc2-final",
     "Microsoft.Extensions.Logging.Console": "1.0.0-rc2-final"
   },
+  "runtimes": {
+      "osx.10.11-x64": {}
+  },
   "frameworks": {
         "netcoreapp1.0": {
           "imports": [ "dnxcore50", "portable-net45+win8" ]
