--- a/src/BlockRacer/project.json
+++ b/src/BlockRacer/project.json
@@ -14,7 +14,7 @@
       "type": "build"
     },
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.0-rc2-final",
-    "Microsoft.AspNetCore.Mvc.Core": "1.0.0-rc2-final",
+    "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Server.Kestrel.Https": "1.0.0-rc2-final",
     "Microsoft.Extensions.Logging.Console": "1.0.0-rc2-final"
   },
