--- a/src/BlockRacer/project.json
+++ b/src/BlockRacer/project.json
@@ -16,7 +16,11 @@
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Server.Kestrel.Https": "1.0.0-rc2-final",
-    "Microsoft.Extensions.Logging.Console": "1.0.0-rc2-final"
+    "Microsoft.Extensions.Logging.Console": "1.0.0-rc2-final",
+    "Microsoft.Extensions.DependencyInjection":"1.0.0-rc2-final",
+    "Microsoft.Extensions.PlatformAbstractions":"1.0.0-rc2-final",
+    "Microsoft.AspNetCore.TestHost":"1.0.0-rc2-final",
+    "Microsoft.AspNetCore.Hosting":"1.0.0-rc2-final"   
   },
   "runtimes": {
       "osx.10.11-x64": {}
