--- a/src/BlockRacer/project.json
+++ b/src/BlockRacer/project.json
@@ -19,7 +19,8 @@
     "Microsoft.Extensions.Logging.Console": "1.0.0-rc2-final",
     "Microsoft.Extensions.DependencyInjection":"1.0.0-rc2-final",
     "Microsoft.Extensions.PlatformAbstractions":"1.0.0-rc2-final",
-    "Microsoft.AspNetCore.Hosting":"1.0.0-rc2-final"   
+    "Microsoft.AspNetCore.Hosting":"1.0.0-rc2-final",
+    "Lohmann.HALight":"0.2.0-rc2"
   },
   "runtimes": {
       "osx.10.11-x64": {}
