--- a/src/BlockRacer/project.json
+++ b/src/BlockRacer/project.json
@@ -8,25 +8,25 @@
       "type": "platform",
       "version": "1.0.0-rc2-3002702"
     },
-    "Microsoft.EntityFrameworkCore.Sqlite": "1.0.0-rc2-final",
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.0.0",
     
-    "Microsoft.EntityFrameworkCore.Sqlite.Design": "1.0.0-rc2-final",
+    "Microsoft.EntityFrameworkCore.Sqlite.Design": "1.0.0",
     "Microsoft.EntityFrameworkCore.Tools": {
       "version": "1.0.0-preview1-final",
       "type": "build"
     },
-    "System.Linq": "4.1.0-rc2-24027",
-    "Microsoft.AspNetCore.Server.Kestrel": "1.0.0-rc2-final",
-    "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final",
-    "Microsoft.AspNetCore.Server.Kestrel.Https": "1.0.0-rc2-final",
-    "Microsoft.Extensions.Logging.Console": "1.0.0-rc2-final",
-    "Microsoft.Extensions.DependencyInjection":"1.0.0-rc2-final",
-    "Microsoft.Extensions.PlatformAbstractions":"1.0.0-rc2-final",
-    "Microsoft.AspNetCore.Hosting":"1.0.0-rc2-final",
+    "System.Linq": "4.0.0",
+    "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
+    "Microsoft.AspNetCore.Mvc": "1.0.0",
+    "Microsoft.AspNetCore.Server.Kestrel.Https": "1.0.0",
+    "Microsoft.Extensions.Logging.Console": "1.0.0",
+    "Microsoft.Extensions.DependencyInjection":"1.0.0",
+    "Microsoft.Extensions.PlatformAbstractions":"1.0.0",
+    "Microsoft.AspNetCore.Hosting":"1.0.0",
     "Lohmann.HALight":"0.2.0-rc2",
-    "Microsoft.Extensions.Configuration.Json": "1.0.0-rc2-final",
-    "Microsoft.Extensions.Logging": "1.0.0-rc2-final",
-    "Microsoft.Extensions.Logging.Debug": "1.0.0-rc2-final",
+    "Microsoft.Extensions.Configuration.Json": "1.0.0",
+    "Microsoft.Extensions.Logging": "1.0.0",
+    "Microsoft.Extensions.Logging.Debug": "1.0.0",
     "Swashbuckle.SwaggerGen": "6.0.0-beta9",
     "Swashbuckle.SwaggerUi": "6.0.0-beta9"
   },
